--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "nuxt": "^2.4.5"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-brands-svg-icons": "^5.7.2",
+    "@fortawesome/free-regular-svg-icons": "^5.7.2",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0"
   }
