--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "@nuxtjs/axios": "^5.4.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0"
   }
